<resources>

    <!-- Menu Items -->
    <string name="action_edit_group_name">Edit group name</string>
    <string name="action_remove_group">Remove group</string>

    <!-- Base Strings for the App -->
    <string name="app_name">giftX</string>
    <string name="pager_title_active_groups">Active Groups</string>
    <string name="pager_title_pending_groups">Pending Groups</string>
    <string name="pager_title_about_me">About Me</string>
    <string name="pager_title_likes">Likes</string>
    <string name="pager_title_dislikes">Dislikes</string>
    <string name="app_slogan">Exchanging gifts the easy way</string>

    <!-- Edit Group Dialogs -->
    <string name="positive_button_edit_item">Edit name</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="dialog_message_are_you_sure_remove_group">
        Are you sure you want to remove this group?
    </string>

    <!-- Base Error Strings -->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>

    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating…</string>
    <string name="progress_dialog_creating_user_with_firebase">Authenticating…</string>

    <!-- Login & Create Account Screen -->
    <string name="title_activity_create_account">Create Account</string>
    <string name="hint_enter_email">Email</string>
    <string name="hint_enter_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_enter_full_name">Full name</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="button_sign_in">Sign In</string>

    <!-- Errors -->
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="error_email_taken">This email is already taken</string>
    <string name="error_invalid_email_not_valid">Please enter a valid email</string>
    <string name="error_confirm_password_not_valid">The passwords don\'t match</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>

    <string name="title_activity_create_group">CreateGroupActivity</string>

    <!-- About Me Screen -->
    <string name="about_me_title">About Me:</string>

    <!-- User Profile -->
    <string name="user_profile_title">Profile</string>

    <!-- Group Creation Strings -->
    <string name="hint_group_title">Group name</string>
    <string name="hint_group_description">Group description</string>
    <string name="create_group">Create Group</string>
    <string name="action_create_group">CREATE</string>
    <string name="action_cancel_create_group">Cancel</string>
    <string name="create_group_activity_title">Create group</string>
    <string name="set_time">Set Time</string>
    <string name="choose_date">Choose Date</string>

    <string name="invite_user">Invite user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Single Active Group -->
    <string name="organized_by">Organized by</string>
    <string name="group_description">Description:</string>

    <!-- accepting invites -->
    <string name="accept_invite">Accept</string>
    <string name="decline_invite">Decline</string>
    <string name="invitation_title">Pending Gift Exchange</string>
    <string name="invitation_mesage">Accept invitation from</string>

    <!-- Pre/Post Sort Fragment Strings -->
    <string name="title_day_until_sort" formatted="falase">%d DAY UNTIL SORT</string>
    <string name="title_days_until_sort" formatted="false">%d DAYS UNTIL SORT</string>
    <string name="title_sorting_on" formatted="false">Sorting on: %s</string>
    <string name="desc_pre_sort_blacklist">Have someone you don\'t get along with? Use the checkbox to add them to
      your blacklist. Keep in mind, there are no guarantees!</string>
    <string name="title_activity_post_sort">PostSortActivity</string>

    <!-- Log Messages -->
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">Authentication successful.</string>

    <!-- Google Errors -->
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>

    <!-- OAuth Format -->
    <string name="oauth2_format">oauth2:%s</string>

    <!-- Admin Edit Group Settings Activity Strings -->
    <string name = "title_activity_admin_settings">Group Settings</string>
    <string name = "save_edited_group_settings">Save Settings</string>
    <string name = "remove_users">Remove Users</string>
    <string name = "hint_price_min">Gift price minimum</string>
    <string name = "hint_price_max">Gift price maximum</string>
    <string name="action_save_settings">SAVE CHANGES</string>

    <!-- Remove Users Activity Strings -->
    <string name = "title_activity_remove_users">Remove Users</string>
    <string name = "desc_remove_users"> To remove users from this group, press the checkbox next
      to their names and then press the "Remove Users" button.</string>

</resources>
