<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activeGroups.CreateGroupActivity">

    <LinearLayout
        android:id="@+id/linear_layout_create_group_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <!-- Display logo -->
        <ImageView
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo"
            android:layout_weight="0.13"
            android:layout_marginBottom="30dp" />

        <!-- Field for Group Title -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/group_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_group_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_group_title"
                android:inputType="textCapWords"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <!-- Field for Group Description-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_group_description"
                android:inputType="text|textMultiLine"
                android:maxLength="2000"
                android:maxLines="10"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:theme="@android:style/Theme" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_gravity="center_horizontal"
            android:theme="@android:style/Theme" />


        <!-- Create Group button -->
        <Button
            android:id="@+id/btn_create_group_final"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:background="@color/primary"
            android:onClick="onCreateGroupPressed"
            android:text="@string/create_group"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_buttons_text_size"
            android:clickable="false" />


    </LinearLayout>

</ScrollView>
